src/test/ui/feature-gates/feature-gate-simd.stderr
error[E0658]: SIMD types are experimental and possibly buggy
  --> $DIR/feature-gate-simd.rs:3:1
   |
LL | #[repr(simd)]
   | ^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27731
   = help: add #![feature(repr_simd)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
